# docs/swagger.json
@@ -34,19 +34,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     },
                     "400": {
                         "description": "wrong request parameter",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     },
                     "401": {
                         "description": "The corresponding username or password is incorrect",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     }
                 }
@@ -87,13 +87,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     },
                     "400": {
                         "description": "wrong request parameter",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     }
                 }
@@ -132,19 +132,76 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     },
                     "400": {
                         "description": "wrong request parameter",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/response.Struct"
+                            "$ref": "#/definitions/dto.Struct"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/change_password": {
+            "put": {
+                "description": "Change password",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "Change password",
+                "parameters": [
+                    {
+                        "description": "user change password",
+                        "name": "payload",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.ChangePassword"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Struct"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/logout": {
+            "put": {
+                "description": "User logout",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "User Logout",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto.Struct"
                         }
                     }
                 }
@@ -161,7 +218,6 @@
             "properties": {
                 "password": {
                     "type": "string",
-                    "maxLength": 20,
                     "minLength": 4
                 },
                 "role_id": {
@@ -184,12 +240,28 @@
             "properties": {
                 "password": {
                     "type": "string",
-                    "maxLength": 20,
                     "minLength": 4
                 },
                 "user_name": {
                     "type": "string",
                     "maxLength": 20,
+                    "minLength": 4
+                }
+            }
+        },
+        "dto.ChangePassword": {
+            "type": "object",
+            "required": [
+                "new_password",
+                "old_password"
+            ],
+            "properties": {
+                "new_password": {
+                    "type": "string",
+                    "minLength": 4
+                },
+                "old_password": {
+                    "type": "string",
                     "minLength": 4
                 }
             }
@@ -208,7 +280,7 @@
                 }
             }
         },
-        "response.JSONTime": {
+        "dto.JSONTime": {
             "type": "object",
             "properties": {
                 "time.Time": {
@@ -216,7 +288,7 @@
                 }
             }
         },
-        "response.Struct": {
+        "dto.Struct": {
             "type": "object",
             "properties": {
                 "code": {
@@ -227,7 +299,7 @@
                     "type": "string"
                 },
                 "time": {
-                    "$ref": "#/definitions/response.JSONTime"
+                    "$ref": "#/definitions/dto.JSONTime"
                 }
             }
         }
