# routers/user_router.go
@@ -2,8 +2,8 @@ package routers
 
 import (
 	"net/http"
-	authHandler "serverhealthcarepanel/handlers/auth"
-	userHandler "serverhealthcarepanel/handlers/user"
+	"serverhealthcarepanel/handlers/auth"
+	"serverhealthcarepanel/handlers/user"
 	"serverhealthcarepanel/middleware"
 
 	"github.com/labstack/echo/v4"
@@ -15,6 +15,7 @@ func InitUserRouter(Router *echo.Group) {
 
 	groupUser := Router.Group("/user", middleware.JWTHandler())
 	groupUser.GET("", getUsers)
+	groupUser.PUT("/logout", authHandler.UserLogout)
 	groupUser.PUT("/change-password", authHandler.ChangePassword)
 }
 
